apply rubocop to all lib source files

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,7 @@ AllCops:
     - '**/Gemfile'
     - '**/Rakefile'
     - '**/rakefile'
+    - 'lib/**/*.rb'
     - 'bin/badev'
     - 'bin/bagen'
   Exclude:
